<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.curso.android.app.practica.counter.view.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ingrese el texto 1"
            android:text="@={viewModel.text1}" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ingrese el texto 2"
            android:text="@={viewModel.text2}" />


        <Button
            android:id="@+id/compareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Comparar"
            android:onClick="@{viewModel::onCompareButtonClick}" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{viewModel.comparisonResult}" />

    </LinearLayout>
</layout>
